# english-typing

./: Cargo.toml  README.md
src/: game.rs  gemini.rs  level.rs  main.rs  meaning.rs  utils.rs
src/game/: char.rs  config.rs  game.rs  mod.rs  question.rs  state.rs  storage.rs
