[package]
name = "english-typing"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

crossterm = "0.28.1"
getch-rs = "0.2.0"

reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
dotenvy = "0.15.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
